# vulndiff

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
tests/: __init__.py  test_cli.py  test_git_diff.py  test_models.py  test_reporter.py  test_rules.py  test_scanner.py
vulndiff/: __init__.py  cli.py  git_diff.py  models.py  reporter.py  rules.py  scanner.py
