[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulndiff"
version = "0.1.0"
description = "Diff-aware security scanner for AI-assisted codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["security", "scanner", "git", "diff", "vulnerability", "owasp", "sast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
vulndiff = "vulndiff.cli:main"

[project.urls]
Homepage = "https://github.com/example/vulndiff"
Repository = "https://github.com/example/vulndiff"
Issues = "https://github.com/example/vulndiff/issues"

[tool.hatch.build.targets.wheel]
packages = ["vulndiff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
